--- a/mern/public/index.html
+++ b/mern/public/index.html
@@ -31,7 +31,17 @@
       crossorigin="anonymous"
     />
 
-    <title>React App</title>
+    <style>
+      html,
+      body,
+      #root,
+      #root > div {
+        height: 100%;
+        margin: 0;
+      }
+    </style>
+
+    <title>Heroes & Villains</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
